--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,10 +20,10 @@ requirements:
   host:
     - python
     - pip
-    - numpy
+    - numpy 1.14.*
   run:
     - python
-    - {{ pin_compatible('numpy') }}
+    - numpy >=1.14
     - scipy
     - joblib
     - h5py
