--- a/.ci_support/win_c_compilervs2015python3.7.yaml
+++ b/.ci_support/win_c_compilervs2015python3.7.yaml
@@ -1,17 +1,13 @@
 c_compiler:
-- gcc
-c_compiler_version:
-- '7'
+- vs2015
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
-docker_image:
-- condaforge/linux-anvil-comp7
 fortran_compiler:
-- gfortran
+- flang
 fortran_compiler_version:
-- '7'
+- '5'
 numpy:
 - '1.14'
 pin_run_as_build:
@@ -20,3 +16,6 @@ pin_run_as_build:
     max_pin: x.x
 python:
 - '3.7'
+zip_keys:
+- - python
+  - c_compiler
