--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,9 @@ source:
 build:
   number: 1
   skip: True  # [py2k]
-  script: "{{ PYTHON }} -m pip install . --no-deps -vv"
+  script:
+    - rm "C:\ProgramData\Chocolatey\bin\gfortran.exe"  # [win]
+    - "{{ PYTHON }} -m pip install . --no-deps -vv"
 
 requirements:
   build:
@@ -21,9 +23,11 @@ requirements:
     - python
     - pip
     - numpy
+    - flang  # [win and py3k]
   run:
     - python
     - {{ pin_compatible('numpy') }}
+    - libflang  # [win and py3k]
     - basemap
     - h5py
     - joblib
