--- a/.ci_support/linux_64_python3.11.____cpython.yaml
+++ b/.ci_support/linux_64_python3.11.____cpython.yaml
@@ -1,21 +1,23 @@
-MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
 c_compiler:
-- clang
+- gcc
 c_compiler_version:
-- '16'
+- '13'
+c_stdlib:
+- sysroot
+c_stdlib_version:
+- '2.17'
+cdt_name:
+- cos7
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+docker_image:
+- quay.io/condaforge/linux-anvil-cos7-x86_64
 fortran_compiler:
 - gfortran
 fortran_compiler_version:
-- '12'
-macos_machine:
-- x86_64-apple-darwin13.4.0
-numpy:
-- '1.23'
+- '13'
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -23,9 +25,9 @@ pin_run_as_build:
 python:
 - 3.11.* *_cpython
 target_platform:
-- osx-64
+- linux-64
 zip_keys:
 - - c_compiler_version
   - fortran_compiler_version
-- - python
-  - numpy
+- - c_stdlib_version
+  - cdt_name
