--- a/.ci_support/osx_64_python3.10.____cpython.yaml
+++ b/.ci_support/osx_64_python3.10.____cpython.yaml
@@ -1,9 +1,15 @@
 MACOSX_DEPLOYMENT_TARGET:
-- '10.9'
+- '10.13'
+MACOSX_SDK_VERSION:
+- '10.13'
 c_compiler:
 - clang
 c_compiler_version:
-- '16'
+- '17'
+c_stdlib:
+- macosx_deployment_target
+c_stdlib_version:
+- '10.13'
 channel_sources:
 - conda-forge
 channel_targets:
@@ -11,11 +17,9 @@ channel_targets:
 fortran_compiler:
 - gfortran
 fortran_compiler_version:
-- '12'
+- '13'
 macos_machine:
 - x86_64-apple-darwin13.4.0
-numpy:
-- '1.22'
 pin_run_as_build:
   python:
     min_pin: x.x
@@ -27,5 +31,3 @@ target_platform:
 zip_keys:
 - - c_compiler_version
   - fortran_compiler_version
-- - python
-  - numpy
